samples/_failures_safe/1761656851_d1f204_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1edb664.c: In function ‘main’:
./samples/SAFE/__tmp_c1edb664.c:129:9: error: expected declaration or statement at end of input
  129 |         printf("No valid log entries found.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_c1edb664.c:129:9: error: expected declaration or statement at end of input
